excluded index.js and put the script inside index.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         
     </main>
 </body>
-<footer></footer>
+<footer><a href="">Henrique Darlim, <script>document.write(new Date().getFullYear())</script>
+</a></footer>
 </html>
