started all over again, added deleuze.png to the page

--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>henrique darlim</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <title>Links</title>
 </head>
 <body>
-    <main>
-        
-    </main>
+    <div class="main">
+        <div class="item a">
+            <div class="name">henrique darlim</div>
+            <div class="bio">my name is henrique darlim and i do this and do that.</div>
+        </div>
+        <div class="item b"></div>
+        <div class="item c">
+            <div class="project-name">Tribute Page <br> Gilles deleuze</div>
+            <div class="img">
+                <img src="/Images/deleuze.png" alt="">
+            </div>
+            <div class="description"><p>Tribute page to the french thinker gilles deleuze with links to his works</p></div>
+        </div>
+        <div class="item d">[1]</div>
+    </div>
 </body>
-<footer><a href="">Henrique Darlim, <script>document.write(new Date().getFullYear())</script>
-</a></footer>
 </html>
