did a gambiarra with the class a

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="main">
+        <div class="item a"></div>
         <div class="item a">
             <div class="name">henrique darlim</div>
             <div class="bio">my name is henrique darlim and i do this and do that.</div>
