trying to fix image not showing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="item c">
             <div class="project-name">Tribute Page <br> Gilles deleuze</div>
             <div class="img">
-                <img src="/Images/deleuze.png" alt="Black and white photo of Gilles Deleuze wearing a hat in front of a brick wall.">
+                <img src="Images/deleuze.png" alt="Black and white photo of Gilles Deleuze wearing a hat in front of a brick wall.">
             </div>
             <div class="description"><p>Tribute page to the french thinker gilles deleuze with links to his works</p></div>
         </div>
