removed redundant text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="item b"></div>
         <div class="item c">
-            <div class="project-name">Tribute Page <br> Gilles deleuze</div>
+            <div class="project-name">Tribute Page</div>
             <div class="img">
                 <img src="Images/deleuze.png" alt="Black and white photo of Gilles Deleuze wearing a hat in front of a brick wall.">
             </div>
