--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="img">
                 <img src="Images/deleuze.png" alt="Black and white photo of Gilles Deleuze wearing a hat in front of a brick wall.">
             </div>
-            <div class="description"><p>Tribute page to the french thinker gilles deleuze with links to his works</p></div>
+            <div class="description"><p><a href="https://hdarlim.github.io/deleuze/" target="_blank">Tribute page to the french thinker gilles deleuze with links to his works</a></p></div>
         </div>
         <div class="item d">[1]</div>
     </div>
